Se agrego la paginaciony uan nueva clase con informacion del contenido